@@ -5,6 +5,8 @@ Release 5.1.1 (unreleased)
 Bug fixes
 ---------
 
+- GUI: fix crash in fluid structure interaction page in builds using PyQt5.
+
 - Fix interlock in Syrthes coupling when combining surface and volume coupling.
 
 - Fix in Rij EBRSM time stepping (coupled solver).
